--- a/configs/sapiens_config.yaml
+++ b/configs/sapiens_config.yaml
@@ -13,6 +13,16 @@ seed: 2025
 # Environment
 # Requires: ANTHROPIC_API_KEY in .env for model generation
 
+SAPIENS_DATA:
+    pca: false                         # apply PCA to reduce feature dimensionality
+    pca_dir : "logs/Models/pca/"       # where to save/load PCA models
+
+    features_to_load: "candles"       # candles = OHLCV
+    adjust: true                      # wheter to adjust OHLC based on stock splits and dividends
+
+    optimization:
+      tune_hparams: true       # Use Optuna Bayesian search.  
+
 # Model Configuration
 SAPIENS_MODEL:
   model_name: "UMIModel"  # Model to use/generate
@@ -24,8 +34,8 @@ SAPIENS_MODEL:
     claude_model: "claude-sonnet-4-20250514"
 
   optimization:
-    tune_hparams: false       # Use Optuna Bayesian search.   
-    n_trials: 20             # Optuna trials of hyper-parameters optimization
+    tune_hparams: true       # Use Optuna Bayesian search.   
+    n_trials: 2             # Optuna trials of hyper-parameters optimization
 
 # Strategy Configuration  
 SAPIENS_STRATEGY:
@@ -33,8 +43,8 @@ SAPIENS_STRATEGY:
 
   # Hyperparameter Optimization
   optimization:
-    tune_hparams: false
-    n_trials: 20
+    tune_hparams: true
+    n_trials: 2
     primary_objective:  "total_pnl_pct"     # used to determine the overall single best hp tuning trial in multi-objective optimization       
     objectives:                             # use only nautilus_trader portfolio_analyzer statistics
       ## Performance / Returns ##
